# Template

./: README.md  pyproject.toml
src/template/: __init__.py
